# aether

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create-files.bat  create-files.py  monitor.ps1  monitor.py  watch.py
aether-template/: .gitignore  aether-config.lua  generate-project.bat
aether-template/scripts/: genie.lua
aether-template/src/: boot.cpp  constants.h
aether-template/src/screen/: MainMenuScreen.cpp  MainMenuScreen.h
cmake/: Build.cmake  FindAllegro.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  FindTmxParser.cmake  Findasd.cmake  files.cmake  mingw-i686-toolchain.cmake
examples/00-basic/: 00-basic.cpp
examples/01-input/: 01-input.cpp  main.cpp
examples/02-animations/: 02-animations.cpp  main.cpp
examples/03-tilemaps/: 03-tilemaps.cpp  sample-map.tmx  sample-tilemap.tsx  sample.tiled-session
examples/04-text/: 04-texts.cpp
examples/basic/: main.cpp
examples/input/: main.cpp
examples/texture/: main.cpp
media/: default.fs  default.vert.vs  sprite.vs
script/: create-project.py  crosscompile-windows.sh  find-aether-projects.py
scripts/: aether-build.lua  aether-common-deps.lua  aether-common.lua  aether-lib.lua  aether-project.lua  aether-sdl-deps.lua  aether.lua  common-flags.lua  common-lib-setup.lua  example-001.exp  genie.lua  sdl-backend.lua
scripts/backends/: sdl-backend.lua
scripts/libs/: aether-files.lua  aether.lua  allegro-files.lua  allegro.lua  freetype.lua  googletest.lua  hadron.lua  imgui.lua  json11.lua  libpng.lua  lua.lua  raylib-files.lua  raylib.lua  rztl.lua  sdl-files.lua  sdl-image.lua  sdl-ttf.lua  sdl.lua  secs.lua  tinyxml2.lua  tmxparser.lua  zlib.lua
scripts/libs/plugins/aether/: aether-allegro-files.lua  aether-files.lua  aether-gl-files.lua  aether-raylib-files.lua  aether-sdl-files.lua  aether.lua
scripts/libs/plugins/hadron/: hadron.lua
scripts/libs/plugins/rztl/: rztl.lua
scripts/tests/: aether-tests.lua
scripts/util/: aether-build.lua  aether-config.lua  aether-project.lua  cmake-configure.lua  common-lib-setup.lua  common.lua  util.lua
src/aether/: aether.h  json11.cpp  meh.cpp  meh.h  platform.h
src/aether/api/: aetherapi.cpp  aetherapi.h
src/aether/audio/: audio.h  playmode.h  sample.h  stream.h
src/aether/audio/3ds/: 3ds_sample.cpp  3ds_stream.cpp
src/aether/audio/allegro/: al_sample.cpp  al_stream.cpp  sample.cpp  stream.cpp
src/aether/audio/dummy/: dummy_sample.cpp  dummy_stream.cpp
src/aether/audio/raylib/: rl_sample.cpp  rl_stream.cpp
src/aether/audio/sdl/: sdl_stream.cpp
src/aether/collision/: tilemap.cpp  tilemap.h
src/aether/core/: Engine.cpp  Engine.h  ModuleObject.h  application.h  applicationbase.cpp  applicationbase.h  handle.cpp  handle.h  handledresourcemanager.h  iinputprocessor.cpp  iinputprocessor.h  input.cpp  input.h  iscreen.cpp  iscreen.h  logger.h  resourcemanager.cpp  resourcemanager.h  textinputprocessor.h  time.h  utility.cpp  utility.h
src/aether/core/allegro/: al_application.cpp  al_application.h  al_keycode.h  al_time.cpp  application.cpp  time.cpp
src/aether/core/gl/: GLEngine.cpp  GLEngine.h  gl_application.cpp  gl_application.h
src/aether/core/raylib/: rl_application.cpp  rl_application.h  rl_keycode.h  rl_time.cpp
src/aether/core/sdl/: sdl_application.cpp  sdl_application.h  sdl_input.cpp  sdl_keycode.h  sdl_time.cpp
src/aether/graphics/: IRenderModule.h  RenderModule.h  animation.cpp  animation.h  asepriteanimloader.cpp  asepriteanimloader.h  basecamera.cpp  basecamera.h  camera.cpp  camera.h  color.h  font.h  graphics.h  platformerscroller.cpp  scroll.cpp  scroll.h  spritesheet.cpp  spritesheet.h  texture.cpp  texture.h  topdownscroller.cpp  topdownscroller.h
src/aether/graphics/allegro/: al_camera.cpp  al_camera.h  al_font.cpp  al_graphics.cpp  al_texture.cpp  font.cpp  graphics.cpp  texture.cpp
src/aether/graphics/dummy/: dummy_font.cpp  sdl_graphics.cpp  sdl_texture.cpp
src/aether/graphics/gl/: gl_camera.cpp  gl_font.cpp  gl_graphics.cpp  gl_rendercontext.h  gl_rendermodule.h  gl_texure.h
src/aether/graphics/raylib/: rl_camera.cpp  rl_font.cpp  rl_graphics.cpp  rl_texture.cpp
src/aether/lua/: helpers.h  lua.h
src/aether/map/: Layer.cpp  Layer.h  ObjectLayer.cpp  ObjectLayer.h  Tile.cpp  Tile.h  TileLayer.cpp  TileLayer.h  TileSet.cpp  TileSet.h  TilesetCollection.cpp  TilesetCollection.h  collisiontilemap.cpp  collisiontilemap.h  tilemap.cpp  tilemap.h
src/aether/math/: matrix.h  rect.h  rng.cpp  rng.h  tween.cpp  tween.h  vec.h
src/aether/render/: AnimationsManager.cpp  AnimationsManager.h  Batch.cpp  Batch.h  BatchDispatcher.cpp  BatchDispatcher.h  Camera.cpp  IBatchedEntity.cpp  IBatchedEntity.h  IRenderModule.h  Render.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  TextureRegion.cpp  TextureRegion.h  Topology.cpp  Topology.h  animation.cpp  animation.h  asepriteanimloader.cpp  asepriteanimloader.h  basecamera.cpp  basecamera.h  camera.h  color.cpp  color.h  font.h  graphics.cpp  graphics.h  platformerscroller.cpp  platformerscroller.h  spritesheet.cpp  spritesheet.h  texture.cpp  texture.h  topdownscroller.cpp  topdownscroller.h
src/aether/resources/: AssetsManager.cpp  AssetsManager.h  asepriteanimationloader.h  asepriteanimstorage.h  baseassetstorage.cpp  baseassetstorage.h  configfile.h  fontassetstorage.cpp  fontassetstorage.h  iassetstorage.h  sheetassetstorage.cpp  sheetassetstorage.h  textureassetstorage.cpp  textureassetstorage.h
src/aether/scene/: CircleSceneNode.h  ITextNode.h  ITilemapNode.cpp  ITilemapNode.h  SceneNode.cpp  SceneNode.h  SceneNodeFactory.cpp  SceneNodeFactory.h  TextNode.h  animationnode.h  gridnode.cpp  gridnode.h  scene.cpp  scene.h  spritenode.cpp  spritenode.h  texturenode.cpp  texturenode.h  tilemapscenenode.h
src/core/: applicationbase.cpp  applicationbase.h  input.cpp  input.h  iscreen.h  time.h
src/core/allegro/: application.cpp  application.h  keycode.h
src/examples/: helloworld.cpp
src/graphics/: texture.cpp
src/graphics/allegro/: graphics.cpp  texture.cpp
src/main/: main.cpp
src/math/: vec.h
src/tests/: maintests.cpp
(+41 files in other folders)
